# linkml-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  PLACEHOLDER_FIXES_COMPLETED.md  README.md  STUB_AUDIT_REPORT.md  STUB_REMEDIATION_COMPLETE.md  TODO_PLACEHOLDER_ANALYSIS.md
client/: Cargo.toml  Cargo.toml.workspace-conv-backup
client/src/: lib.rs
core/: Cargo.toml  Cargo.toml.workspace-conv-backup
core/src/: annotations.rs  configuration.rs  configuration_v2.rs  error.rs  hashmap_utils.rs  lib.rs  schema_arc.rs  schema_arc.rs.minified_backup  settings.rs  string_pool.rs  types.rs  types_v2.rs  utils.rs  utils_v2.rs  validation.rs
linkml-client/: Cargo.toml
linkml-client/src/: lib.rs
linkml-service/: 100_PERCENT_PARITY_ACHIEVED.md  CHANGELOG.md  CLI_ENHANCEMENTS_COMPLETE.md  COMPILATION_FIXED.md  CRITICAL_VIOLATIONS_REPORT.md  Cargo.toml  EXPRESSION_COMPILATION_COMPLETE.md  EXPRESSION_FUNCTIONS_COMPLETE.md  FUTURE_ENHANCEMENTS_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_SUMMARY.md  INTEGRATION_TEST_STATUS.md  MIGRATION_0.1_TO_2.0.md  MIGRATION_FROM_PYTHON.md  PARITY_EVALUATION.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_SECURITY_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY_AUDIT_2025-01.md  USER_GUIDE.md  WARNING_FIXES_SUMMARY.md  batch_fix_warnings.sh  check_output.txt
linkml-service/benches/: expression_benchmarks.rs  generation_benchmarks.rs  linkml_benchmarks.rs  optimization_benchmarks.rs  parsing_benchmarks.rs  performance_bench.rs  typeql_generation_benchmarks.rs  validation_bench.rs  validation_benchmarks.rs
linkml-service/config/: default.yaml  production.yaml
linkml-service/docs/: API.md  API_GUIDE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  MIGRATION.md  PERFORMANCE.md  SECURITY.md  USER_GUIDE.md  typeql-generator-guide.md
linkml-service/examples/: README.md  advanced_validation.rs.txt  advanced_validation_api.rs  api_loading.rs  array_support.rs  basic_usage.rs  basic_usage.rs.full  basic_usage.rs.txt  basic_usage_api.rs  batch_processing.rs  cli_usage.rs  cli_with_fs_adapter.rs  code_generation_showcase.rs  comprehensive_demo.rs  comprehensive_usage.rs  csv_data_loading.rs  data_transformation.rs  database_loading.rs  excel_generation.rs  excel_generation_advanced.rs  expression_functions_demo.rs  expression_language.rs  expression_performance_demo.rs  generate_code_from_schema.rs  generate_complete_example.rs  generate_iso3166_code.rs  generate_iso3166_simple.rs  graphviz_generation.rs  interactive_repl_demo.rs  mermaid_generation.rs  parse_and_validate_iso3166.rs  performance_and_security.rs  performance_summary.rs  plugin_system_demo.rs  prefix_map_generation.rs  project_generation.rs  rdf_generation.rs  rootreal_integration.rs.full  rootreal_integration.rs.txt  rust_code_generation.rs  (+18 more)
linkml-service/schemas/: annotations.yaml  meta.yaml  types.yaml
linkml-service/scripts/: performance_comparison.py
linkml-service/src/: array.rs  cli.rs  cli_enhanced.rs  cli_enhanced.rs.minified_backup  cli_fs_adapter.rs  factory.rs  factory_v2.rs  factory_v3.rs  file_system_adapter.rs  ide.rs  integrated_serve.rs  interactive.rs  lib.rs  migration.rs  monitoring_integration.rs  prelude.rs  service.rs
linkml-service/tests/: annotations_advanced_test.rs  annotations_test.rs  api_loader_test.rs  basic_smoke.rs  boolean_constraints_proptest.rs  boolean_constraints_test.rs  cli_static_methods_simple_test.rs  cli_static_methods_test.rs  composition_test.rs  conditional_requirements_complex_test.rs  conditional_requirements_test.rs  config_tests.rs  consumer_integration_test.rs  consumer_integration_test_api.rs  custom_functions_test.rs  custom_validator_test.rs  custom_validators_advanced_test.rs  database_loader_test.rs  debug_pattern_parsing.rs  debug_pattern_resolution.rs  edge_cases_test.rs  expression_cache_test.rs  expression_error_handling_tests.rs  expression_functions_test.rs  expression_language_test.rs  expression_security_test.rs  feature_parity_test.rs  full_integration_test.rs  functionality_verification.rs  generator_error_handling_tests.rs  graphviz_generator_test.rs  import_resolution_advanced_test.rs  import_resolver_v2_test.rs  instance_validation_test.rs  integration_no_panic_tests.rs  integration_test.rs  java_generator_test.rs  javascript_generator_test.rs  json_ld_generator_test.rs  json_schema_generator_test.rs  (+50 more)
service/: 100_PERCENT_PARITY_ACHIEVED.md  CHANGELOG.md  CLI_ENHANCEMENTS_COMPLETE.md  Cargo.toml  Cargo.toml.workspace-conv-backup  FUTURE_ENHANCEMENTS_COMPLETE.md  INTEGRATION_SUMMARY.md  MIGRATION_FROM_PYTHON.md  README.md
service/benches/: expression_benchmarks.rs  generation_benchmarks.rs  inference_benchmarks.rs  inference_benchmarks.rs.disabled  linkml_benchmarks.rs  loader_benchmarks.rs  optimization_benchmarks.rs  performance_bench.rs  roundtrip_benchmarks.rs  simple_excel_bench.rs  typeql_generation_benchmarks.rs  validation_bench.rs  validation_benchmarks.rs
service/docs/: API.md  GETTING_STARTED.md
service/examples/: README.md  advanced_validation_api.rs  cli_with_fs_adapter.rs  excel_generation.rs  full_integration.rs  generate_complete_example.rs  interactive_repl_demo.rs  page_xml_schema_inference.rs  performance_comparison.rs  plugin_system_demo.rs  schema_migration_example.rs.minified_backup  semantic_web_generators.rs  test_rust_generator_comprehensive.rs  verify_rust_generator.rs
service/scripts/: verify_phase4_performance.sh
service/src/: cli.rs  config_helpers.rs  factory.rs  factory_v2.rs  factory_v3.rs  handle.rs  integrated_serve.rs  interactive.rs  lib.rs  migration.rs  prelude.rs  service.rs  wiring.rs
service/tests/: annotations_advanced_test.rs  basic_smoke.rs  boolean_constraints_proptest.rs  cli_integration_tests.rs  comprehensive_edge_cases_test.rs  conditional_requirements_complex_test.rs  conditional_requirements_test.rs  consumer_integration_test.rs  consumer_integration_test_api.rs  custom_validator_test.rs  database_loader_test.rs  debug_pattern_resolution.rs  error_paths_test.rs  (+56 more)
(+584 files in other folders)
