[package]
name = "rootreal-model-symbolic-linkml-core"
version = "2.0.0"
edition = "2024"
authors = ["Simon C. Kemper <textpast@textpast.com>"]
license = "CC-BY-NC-4.0"
description = "Core types and traits for LinkML schema validation in Rust"
repository = "https://github.com/simonckemper/rootreal"
keywords = ["linkml", "schema", "validation", "metadata"]
categories = ["data-structures", "encoding", "parser-implementations"]
readme = "README.md"

[package.metadata]
alias = "linkml-core"
[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
indexmap = { version = "2.2", features = ["serde"] }
dashmap = { workspace = true }

# Async support
async-trait = "0.1"
tokio = { version = "1.42", features = ["sync", "macros"] }

# Pattern matching and validation
regex = "1.10"
once_cell = "1.18"

# URL and URI handling
url = "2.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Configuration helpers
humantime-serde = "1.1"
num_cpus = "1.16"
anyhow = { workspace = true }
configuration_core = { workspace = true }
timestamp_core = { workspace = true }

[dev-dependencies]
tokio = { version = "1.42", features = ["full", "test-util"] }
pretty_assertions = "1.4"
proptest = "1.3"
criterion = "0.5"
