[package]
name = "linkml-service"
version = "2.0.0"
edition = "2024"
authors = ["Simon C. Kemper <textpast@textpast.com>"]
license = "CC-BY-NC-4.0"
description = "LinkML schema validation service with 100% Python parity and TypeQL generation"
repository = "https://github.com/simonckemper/rootreal"
keywords = ["linkml", "schema", "validation", "typeql", "codegen"]
categories = ["data-structures", "encoding", "parser-implementations", "development-tools"]

[features]
default = []
database = []  # Feature flag for database support (temporarily without sqlx dependency due to SQLite conflicts)
# database = ["dep:sqlx"]  # Full database support - temporarily disabled due to SQLite conflicts

[dependencies]
# Core dependencies
linkml-core = { path = "../linkml-core" }

# RootReal service dependencies
logger-core = { path = "../../logger/logger-core" }
timestamp-core = { path = "../../timestamp/timestamp-core" }
task-management-core = { path = "../../task-management/task-management-core" }
error-handling-core = { path = "../../error-handling/error-handling-core" }
configuration-core = { path = "../../configuration/configuration-core" }
cache-core = { path = "../../cache/cache-core" }
monitoring-core = { path = "../../monitoring/monitoring-core" }
telemetry-core = { path = "../../telemetry/telemetry-core" }
dbms-core = { path = "../../dbms/dbms-core" }
parse-core = { path = "../../parse/parse-core" }
timeout-core = { path = "../../timeout/timeout-core" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_urlencoded = "0.7"

# Pattern matching
regex = "1.10"
pcre2 = "0.2"  # For full PCRE2 support with named capture groups

# Date/time and URL validation
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
rand = "0.8"

# XML parsing
quick-xml = "0.31"

# Collections
indexmap = { version = "2.2", features = ["serde"] }
dashmap.workspace = true
lru = "0.13"
once_cell = "1.19"

# Excel generation
rust_xlsxwriter = "0.89.1"

# TypeDB integration
typedb-driver = "3.4.0"
base64 = "0.22"

# String case conversion
convert_case = "0.6"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Validation compilation
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Performance
rayon = "1.8"
parking_lot = "0.12"
arc-swap = "1.6"
blake3 = "1.5"
num_cpus = "1.16"
bincode = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
smallvec = "1.13"

# Cryptography
sha2 = "0.10"

# Plugin system
dlopen = "0.1"
dlopen_derive = "0.1"
semver = { version = "1.0", features = ["serde"] }
toml = "0.8"
petgraph = "0.6"
dirs = "5.0"
glob = "0.3"
hostname = "0.4"

# File operations
walkdir = "2.4"
notify = "7.0"
csv = "1.3"

# RDF support
oxigraph = { version = "0.5.0-beta.2" }

# Database support - temporarily removed to resolve libsqlite3-sys conflict with burn
# sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "mysql"], optional = true }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# System info
sysinfo = "0.33"
uuid = { version = "1.11", features = ["v4"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
rustyline = "14.0"

[dev-dependencies]
tokio = { version = "1.42", features = ["full", "test-util"] }
pretty_assertions = "1.4"
proptest = "1.3"
criterion = "0.5"
tempfile = "3.8"
insta = "1.34"

[[bench]]
name = "validation_benchmarks"
harness = false

[[bench]]
name = "generation_benchmarks"
harness = false

[[bench]]
name = "parsing_benchmarks"
harness = false

[[bench]]
name = "expression_benchmarks"
harness = false

[[bench]]
name = "typeql_generation_benchmarks"
harness = false

[[bin]]
name = "linkml"
path = "src/bin/linkml.rs"

